--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="src/Character.js"></script>
     <script src="src/Physics.js"></script>
     
-    <script src="src/sketch.js"></script>
+    <script src="sketch.js"></script>
     
   </body>
 </html>
