--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="src/Character.js"></script>
     <script src="src/Physics.js"></script>
     <script src="src/Gui.js"></script>
+    <script src="src/keypress.js"></script>
     <script src="sketch.js"></script>
     
   </body>
