Adjustments name files and folders

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     </main>
-    <script src="src/Configuration.js"></script>
+    <script src="Configuration.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
     <script src="src/Physics.js"></script>
