--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="src/Physics.js"></script>
     <script src="src/Gui.js"></script>
     <script src="src/keypress.js"></script>
+    <script src="src/tools.js"></script>
     <script src="sketch.js"></script>
     
   </body>
