--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="path/to/p5.sound.js"></script>
     <meta charset="utf-8" />
 
   </head>
@@ -13,7 +14,6 @@
     <script src="Configuration.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
-    <script src="src/Physics.js"></script>
     <script src="src/Gui.js"></script>
     <script src="src/keypress.js"></script>
     <script src="src/tools.js"></script>
