Add : - Inventory v0.1.0, - A search poster and pressing "O" adds parts, - Fix bugs, - Updates here and there.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/keypress.js"></script>
     <script src="src/Cinematic.js"></script>
     <script src="src/PNJ.js"></script>
+    <script src="src/Inventory.js"></script>
     <script src="src/tools.js"></script>
     <script src="sketch.js"></script>
     
