Interfaces System Update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="Configuration.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
-    <script src="src/Gui.js"></script>
+    <!-- <script src="src/Gui.js"></script> -->
+    <script src="src/UI.js"></script>
     <script src="src/keypress.js"></script>
     <script src="src/Cinematic.js"></script>
     <script src="src/PNJ.js"></script>
