--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <script src="Configuration.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
-    <script src="src/Gui.js"></script>
+    <!-- <script src="src/Gui.js"></script> -->
+    <script src="src/UI.js"></script>
     <script src="src/keypress.js"></script>
+    <script src="src/Cinematic.js"></script>
+    <script src="src/PNJ.js"></script>
+    <script src="src/Inventory.js"></script>
     <script src="src/tools.js"></script>
     <script src="sketch.js"></script>
     
