--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="src/keypress.js"></script>
     <script src="src/Cinematic.js"></script>
     <script src="src/PNJ.js"></script>
+    <script src="src/Ennemis.js"></script>
     <script src="src/Inventory.js"></script>
     <script src="src/tools.js"></script>
     <script src="sketch.js"></script>
