--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
   <body>
     <main>
     </main>
+
+
     <script src="Configuration.js"></script>
+    <script src="src/tools.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
-    <!-- <script src="src/Gui.js"></script> -->
+    
+    <!--& Interfaces -->
     <script src="src/UI.js"></script>
     <script src="src/keypress.js"></script>
     <script src="src/Cinematic.js"></script>
+    <script src="src/Inventory.js"></script>
+
+    <!--& Entités -->
+    <script src="src/Mobs.js"></script>
     <script src="src/PNJ.js"></script>
     <script src="src/Ennemis.js"></script>
-    <script src="src/Inventory.js"></script>
-    <script src="src/tools.js"></script>
+
     <script src="sketch.js"></script>
     
   </body>
