Smooth Camera, Background Added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="Configuration.js"></script>
     <script src="src/tools.js"></script>
+    <script src="src/Background.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
     
