Squashed commit of the following:
commit 0265cfee9aa8bec51ad2c2c0182dda10adbb3470
Author: Nay <ilan.outyey@gmail.com>
Date:   Mon Mar 13 22:57:03 2023 +0100

    Smooth Camera, Background Added

commit efb54072b4ac8ddaf1af09da0cc3d9bc27c52efa
Author: Nay <ilan.outyey@gmail.com>
Date:   Mon Mar 13 10:49:04 2023 +0100

    Mob return to Round Fixed

commit 96a54f75098164d339dbd293e0a6e0b60638018c
Author: Nay <ilan.outyey@gmail.com>
Date:   Mon Mar 13 08:21:33 2023 +0100

    Mobs Bug Fixed

commit 7db012d3380186f8413060555f1cd81eecabaa67
Author: Nay <ilan.outyey@gmail.com>
Date:   Mon Mar 13 08:03:26 2023 +0100

    PNJ Collides Bug Fixed

commit 55407c2db67eb2251dcc072594cce104511c3371
Author: Nay <ilan.outyey@gmail.com>
Date:   Fri Mar 10 08:20:27 2023 +0100

    Mobs and PNJ movements

commit fcd6e0108532a128f0fe46104a630261275cb3c9
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Mar 8 21:45:46 2023 +0100

    Mobs moving system

commit b28a220e7fceac14b8b85e2c667b302bc7499a5b
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Mar 8 16:08:42 2023 +0100

    PNJ Movements

commit 8d22c469284afe7b7697cfcb35bd606ae72f033d
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Mar 8 12:01:29 2023 +0100

    PNJ colliders system

commit 981900624949a54e292bf78baac59875ba225723
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Sun Mar 5 12:45:05 2023 +0100

    Add system Ennemis

commit 76021beb3016ee048b7b9e55c158120dc96d5758
Author: Nay <ilan.outyey@gmail.com>
Date:   Thu Mar 2 23:41:11 2023 +0100

    Textures Uses Tileset

commit 0b2063d4c978f1005084b082ff6f61a5192513e2
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Thu Mar 2 19:37:09 2023 +0100

    Villager in house and outside

commit 005e985c2b5bf491f8dea3a73957883b4c1192ef
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Thu Mar 2 19:26:54 2023 +0100

    Updates for PNJ

commit 81ab45f4b8dd239d866572ee77a31dec4a1c7380
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Thu Mar 2 19:11:44 2023 +0100

    Update PNJ

co

--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
   <body>
     <main>
     </main>
+
+
     <script src="Configuration.js"></script>
+    <script src="src/tools.js"></script>
+    <script src="src/Background.js"></script>
     <script src="src/Grid.js"></script>
     <script src="src/Character.js"></script>
-    <!-- <script src="src/Gui.js"></script> -->
+    
+    <!--& Interfaces -->
     <script src="src/UI.js"></script>
     <script src="src/keypress.js"></script>
     <script src="src/Cinematic.js"></script>
-    <script src="src/PNJ.js"></script>
     <script src="src/Inventory.js"></script>
-    <script src="src/tools.js"></script>
+
+    <!--& Entités -->
+    <script src="src/Mobs.js"></script>
+    <script src="src/PNJ.js"></script>
+    <script src="src/Ennemis.js"></script>
+
     <script src="sketch.js"></script>
     
   </body>
