--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="src/Entities/Mobs.js"></script>
     <script src="src/Entities/PNJ.js"></script>
     <script src="src/Entities/Ennemis.js"></script>
+    <script src="src/Entities/Doors.js"></script>
 
     <script src="sketch.js"></script>
     
