Squashed commit of the following:
commit 842bd3aaf884f596aae07334f85b51dd5c4fb280
Author: Nay <ilan.outyey@gmail.com>
Date:   Fri Apr 7 08:22:05 2023 +0200

    Bug fixes

commit 100872d474590a4c4e964921b772a872476dd3c3
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Thu Apr 6 22:35:28 2023 +0200

    - New tileset for item,
    - New sprite for ennemy,
    - New sprite for PNJ,
    - New background in game,
    - New background for troc,
    - and more...

commit 7e6268b83955b96923ccc601b9ffeb3ec1e9e8de
Author: RaphaelMK <53433445+xTsuKiZox@users.noreply.github.com>
Date:   Thu Apr 6 16:36:31 2023 +0200

    Bugs fixs

commit ab10b9064b5e25ca82f4660b27b44f36dd15b804
Author: RaphaelMK <tsukizooff@outlook.fr>
Date:   Wed Apr 5 21:13:08 2023 +0200

    - New GUI for troc
    - New maps

commit f52c91529e97a6e096867a1f3f4f497048e73a6a
Merge: 9e2d843 29abcff
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Apr 5 16:55:55 2023 +0200

    Merge branch 'developpement' of https://github.com/IlanOu/projet-jeu-2D into developpement

commit 9e2d843c130e2c600517c9d1dff3139941617453
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Apr 5 16:55:21 2023 +0200

    PVE System

commit 29abcffa985dbbb30d329938333853ee8525e75b
Author: RaphaelMK <53433445+xTsuKiZox@users.noreply.github.com>
Date:   Wed Apr 5 16:33:47 2023 +0200

    - Update player in house
    - PNJ in house can see player
    - and more

commit d06d2d35c8d181f65f9632f052ebac7b50de2761
Merge: 635d341 2c2b666
Author: RaphaelMK <53433445+xTsuKiZox@users.noreply.github.com>
Date:   Wed Apr 5 14:51:06 2023 +0200

    Merge branch 'developpement' of https://github.com/IlanOu/projet-jeu-2D into developpement

commit 635d341590095bd72592cb39920ca55794def1c8
Author: RaphaelMK <53433445+xTsuKiZox@users.noreply.github.com>
Date:   Wed Apr 5 14:51:01 2023 +0200

    Bugs fix

commit 2c2b66649c87f16eb011368a157217ce49f41fa3
Merge: 49733ec 049f663
Author: Nay <ilan.outyey@gmail.com>
Date:   Wed Apr 5 14:38:44 2023 +0200

    Merge 

--- a/index.html
+++ b/index.html
@@ -4,31 +4,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="path/to/p5.sound.js"></script>
+    <script src="src/P5Lib/p5.sound.min.js"></script>
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <main>
-    </main>
-
 
     <script src="Configuration.js"></script>
     <script src="src/tools.js"></script>
-    <script src="src/Background.js"></script>
-    <script src="src/Grid.js"></script>
-    <script src="src/Character.js"></script>
+    <script src="src/Map/Background.js"></script>
+    <script src="src/Map/Grid.js"></script>
+    <script src="src/Entities/Character.js"></script>
     
     <!--& Interfaces -->
-    <script src="src/UI.js"></script>
-    <script src="src/keypress.js"></script>
-    <script src="src/Cinematic.js"></script>
-    <script src="src/Inventory.js"></script>
+    <script src="src/GUI/UI.js"></script>
+    <script src="src/GUI/keypress.js"></script>
+    <script src="src/GUI/Cinematic.js"></script>
+    <script src="src/GUI/Inventory.js"></script>
 
     <!--& Entités -->
-    <script src="src/Mobs.js"></script>
-    <script src="src/PNJ.js"></script>
-    <script src="src/Ennemis.js"></script>
+    <script src="src/Entities/Mobs.js"></script>
+    <script src="src/Entities/PNJ.js"></script>
+    <script src="src/Entities/Ennemis.js"></script>
+    <script src="src/Entities/Doors.js"></script>
 
     <script src="sketch.js"></script>
     
