Maps updates and add Admins systems

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
 
     <script src="Configuration.js"></script>
+    <script src="src/Utilities/admins.js"></script>
     <script src="src/tools.js"></script>
     <script src="src/Map/Background.js"></script>
     <script src="src/Map/Grid.js"></script>
