- Tidying up files, - Adding fps, - Starting NPCs "with chat"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 
+    <!--& Utilitaires -->
     <script src="Configuration.js"></script>
     <script src="src/Utilities/admins.js"></script>
     <script src="src/tools.js"></script>
