--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <script src="src/P5Lib/p5.js"></script>
     <script src="src/P5Lib/p5.sound.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
@@ -12,6 +12,7 @@
   <body>
 
     <!--& Utilitaires -->
+    <script src="src/Datas/InitDatas.js"></script>
     <script src="Configuration.js"></script>
     <script src="src/Utilities/admins.js"></script>
     <script src="src/tools.js"></script>
@@ -34,4 +35,5 @@
     <script src="sketch.js"></script>
 
   </body>
+
 </html>
