--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="src/Entities/PNJ.js"></script>
     <script src="src/Entities/Ennemis.js"></script>
     <script src="src/Entities/Doors.js"></script>
+    <script src="src/Entities/Items.js"></script>
 
     <script src="sketch.js"></script>
 
