--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/tools.js"></script>
     <script src="src/Map/Background.js"></script>
     <script src="src/Map/Grid.js"></script>
+    <script src="src/Map/lights.js"></script>
     
     <!--& Interfaces -->
     <script src="src/GUI/UI.js"></script>
